[metadata]
name = mbtasalary
version = 1.0.0
author = Michael Hirsch, Ph.D.
description = Examining MBTA salaries
url = https://github.com/scivision/mbta_salary
keywords =
  public transportation
  MBTA
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
include_package_data = True
packages = find:
scripts =
  MBTAsalary.py
install_requires =
  pandas
  xlrd
  numpy

[options.extras_require]
tests =
  pytest
  flake8
  mypy
plot =
  matplotlib

[flake8]
max-line-length = 132
exclude = .git,__pycache__,.eggs/,doc/,docs/,build/,dist/,archive/
